Fix alignment of HL on mobiles

--- a/thinkhazard/static/less/report.less
+++ b/thinkhazard/static/less/report.less
@@ -536,15 +536,15 @@ footer {
     li {
       position: relative;
       min-width: 68px;
+      padding-top: 20px;
       &.active {
         border-radius: 5px;
+        padding-top: 15px;
       }
       &.active a i.hazard-icon,
       a i.hazard-icon {
         font-size: 32px;
         position: static;
-        /* top: 0; */
-        /* left: 3px; */
       }
       span {
         white-space: initial;
